# taskerino

./: .env.example  .gitignore  .npmrc  .turborc  AI_ARCHITECTURE_REVIEW.md  AI_IMPLEMENTATION_REVIEW.md  AI_LEARNING_SYSTEM_PLAN.md  AI_METADATA_ANALYSIS.md  AI_PROMPTS_AUDIT.md  AI_SERVICES_UPDATES_COMPLETED.md  ANIMATION_EXECUTIVE_SUMMARY.txt  APPCONTEXT_SPLIT_IMPLEMENTATION_PLAN.md  APPCONTEXT_SPLIT_SUMMARY.md  APPCONTEXT_TYPES_CLEANUP_PLAN.md  AUDIO_DEVICE_ENUMERATION_USAGE.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_QUICK_REFERENCE.txt  BALEYBOTS_ALPHA20_REVIEW.md  BALEYBOTS_SIMPLIFICATION_OPPORTUNITIES.md  CAPTURE_FLOW_GUIDE.md  CHANGELOG.md  CHAPTER_COMPLETION_PLAN.md  CLAUDE.md  CLEANUP_CHECKLIST.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_SUCCESS_REPORT.md  CLEANUP_VERIFICATION_REPORT.md  COMPREHENSIVE_REVIEW.md  CONTEXT_MIGRATION_PLAN.md  CONTRIBUTING.md  CURRENT_STATUS_REPORT.md  DATA_PIPELINE_AUDIT_MASTER_REPORT.md  DEBUGGING_MEMORY_LEAK.md  DEPLOYMENT.md  DISTRIBUTION.md  EXPLORATION_NOTES.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEXEDDB_DIAGNOSTIC.md  (+88 more)
src-tauri/: Cargo.toml  Info.plist  SIGNING_SETUP.md  TASK_2.9_VERIFICATION_REPORT.md  TASK_3.3_VERIFICATION_REPORT.md  build.rs  entitlements.plist  fix_swift_stubs.patch  tauri.conf.json  test_tool_serialization.rs
src-tauri/ScreenRecorder/: PHASE_2_ERROR_BRIDGE_REPORT.md  PiPCompositor.swift  ScreenRecorder.h  ScreenRecorder.swift  TASK_2.1_VERIFICATION_REPORT.md  TASK_2.2_VERIFICATION_REPORT.md  TASK_2.3_VERIFICATION_REPORT.md  TASK_2.4_VERIFICATION_REPORT.md  TASK_2.5_VERIFICATION_REPORT.md  TASK_2.6_VERIFICATION_REPORT.md  TASK_2.8_VERIFICATION_REPORT.md  TASK_4_BENCHMARK_REPORT.md  TASK_4_IMPLEMENTATION_SUMMARY.md  VideoAudioMerger.README.md  VideoAudioMerger.h  VideoAudioMerger.swift
src-tauri/benches/: audio_graph_bench.rs
src-tauri/capabilities/: default.json
src-tauri/scripts/: baleybot-handler.js  baleybot-proxy-init.js  baleybots-bridge.js
src-tauri/src/: activity_monitor.rs  ai_types.rs  api_keys.rs  (+19 more)
(+1779 files in other folders)
