[package]
name = "app"
version = "0.1.0"
description = "Smart task and note management with AI-powered features"
authors = ["James McArthur"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size and speed
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization (slower compile, faster runtime)
strip = true        # Strip symbols for smaller binary
panic = "abort"     # Don't include unwinding code

[profile.dev]
# Faster dev builds
opt-level = 1       # Some optimization for better dev performance

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"  # Secure key-value storage for API keys
tauri-plugin-window-state = "2"
screenshots = "0.8"
base64 = "0.22"
image = "0.25"
chrono = "0.4"
cpal = "0.15"  # Cross-platform audio I/O
hound = "3.5"  # WAV encoding
lazy_static = "1.4"  # Global static variables
libc = "0.2"  # C library bindings
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }  # HTTP client for API calls
tokio = { version = "1", features = ["full"] }  # Async runtime
futures-util = "0.3"  # Stream utilities for SSE parsing
rayon = "1.7"  # Parallel processing for data operations

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
